k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-dept
  namespace: static1
spec:
  selector:
    matchLabels:
      app: static-dept
  template:
    metadata:
      labels:
        app: static-dept
    spec:
      containers:
      - name: static-dept
        image: 913443211236.dkr.ecr.us-east-1.amazonaws.com/static1:1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
