k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-svc
  namespace: static1
spec:
  selector:
    app: static-dept
  ports:
  - port: 80
    targetPort: 80
